<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:id="@+id/item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/card_corner"
    app:cardElevation="@dimen/card_elevation"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_card_view">

        <ImageView
            android:id="@+id/weather_icon"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:paddingStart="@dimen/image_padding_start"
            android:paddingEnd="@dimen/image_padding_end"
            app:srcCompat="@drawable/icon_default"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/content_description_icon" />

        <TextView
            android:id="@+id/textViewTempNow"
            style="@style/temp_now_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tool:text="@string/temp_now"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/weather_icon"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tool:text= "@string/date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/weather_icon"/>

        <TextView
            android:id="@+id/TempMin"
            style="@style/tempMinMax_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tool:text="@string/temp_min"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/TempMax"
            style="@style/tempMinMax_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tool:text="@string/temp_max"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
